@@ -63,6 +63,7 @@ Template for new versions:
 
 ## Misc Improvements
 - `overlay`: allow ``overlay_onupdate_max_freq_seconds`` to be dynamically set to 0 for a burst of high-frequency updates
+- `orders`: ``recheck`` command now only resets orders that have conditions that can be rechecked
 
 ## Documentation
 
